[package]
name = "demia_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
iota-sdk = { path = "../iota-sdk/sdk", features = ["tls", "stronghold"] }
lets = { path = "../streams/lets"}
streams = { path = "../streams/streams", features = ["serde", "did", "mysql-client", "bucket"] }
identity_did = { path = "../identity.rs/identity_did"}
identity_iota = { path = "../identity.rs/identity_iota"}
identity_demia = { path = "../identity.rs/identity_demia", features = ["client", "iota-client"] }
iota_stronghold = { path = "../stronghold.rs/client"}

isocountry = { version = "0.3" }
alvarium-sdk-rust = { git = "https://github.com/project-alvarium/alvarium-sdk-rust", branch = "main" }

tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio-stream = "0.1"
log = "0.4"
rand = "0.8.5"
indexmap = "2.1.0"

chrono = "0.4.26"
fern = "0.6.2"
async-trait = "0.1.68"

thiserror = "1.0.40"
rocket_okapi = "0.8.0"
schemars = { version = "0.8", features = [ "chrono", "indexmap2" ] }
csv = "1.3.0"

google-cloud-storage = { git = "https://github.com/yoshidan/google-cloud-rust", branch="main", default-features=false, features=["trace","rustls-tls"]}

rusoto_sts = "0.48.0"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"

aws-credential-types = { version = "1.2.0" }
aws-config = { version = "1.5.6", features=["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.45.0" }
aws-sdk-sts = "1.42.0"

vaultrs = "0.7.0"

base64 = "0.21.2"
hex = "0.4.3"
der = "0.7.6"
uuid = { version = "1.8.0", features = ["v4"] }
url = "2.4"
jsonwebtoken = "8.3.0"

[dev-dependencies]
dotenv = "0.15.0"

[features]
default = ["streams/default", "utangle-client", "did", "std", "test"]
std = ["streams/std"]
test = []

did = ["streams/did"]
bucket = ["streams/did"]
mysql-client = ["streams/mysql-client"]
utangle-client = ["streams/utangle-client"]

[profile.ci]
inherits = "dev"
debug = 0
incremental = false

[[example]]
name = "main"
path = "examples/main.rs"